Banner: restrict custom icon to info/upsell to fix misaligned info icon

--- a/packages/react/src/SelectPanel/SelectPanel.module.css
+++ b/packages/react/src/SelectPanel/SelectPanel.module.css
@@ -56,7 +56,6 @@
   margin-top: var(--base-size-4);
   margin-right: var(--base-size-8);
   margin-left: var(--base-size-8);
-  padding: var(--base-size-4) !important;
 }
 
 .Notice a {
